--- a/WolvenKit.RED3.CR2W/WolvenKit.RED3.CR2W.csproj
+++ b/WolvenKit.RED3.CR2W/WolvenKit.RED3.CR2W.csproj
@@ -26,16 +26,14 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Catel.Core" Version="5.12.13" />
     <PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
     <PackageReference Include="FastMember" Version="1.5.0" />
-    <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <ProjectReference Include="..\WolvenKit.Interfaces\WolvenKit.Interfaces.csproj" />
+    <ProjectReference Include="..\WolvenKit.Core\WolvenKit.Core.csproj" />
   </ItemGroup>
 
 </Project>
