--- a/WolvenKit.Core/WolvenKit.Core.csproj
+++ b/WolvenKit.Core/WolvenKit.Core.csproj
@@ -18,7 +18,7 @@
   </PropertyGroup>
 
     <ItemGroup>
-        
+        <PackageReference Include="Catel.Core" Version="5.12.13" />
         <PackageReference Include="FastMember" Version="1.5.0" />
         <PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.9.0" />
