--- a/WolvenKit.Modkit/WolvenKit.Modkit.csproj
+++ b/WolvenKit.Modkit/WolvenKit.Modkit.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
-    <ProjectReference Include="..\WolvenKit.Interfaces\WolvenKit.Interfaces.csproj" />
+    <ProjectReference Include="..\WolvenKit.Core\WolvenKit.Core.csproj" />
     <ProjectReference Include="..\WolvenKit.RED4.CR2W\WolvenKit.RED4.CR2W.csproj" />
   </ItemGroup>
 
