--- a/WolvenKit.RED4.CR2W/WolvenKit.RED4.CR2W.csproj
+++ b/WolvenKit.RED4.CR2W/WolvenKit.RED4.CR2W.csproj
@@ -24,18 +24,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Catel.Core" Version="5.12.13" />
 		<PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
 		<PackageReference Include="FastMember" Version="1.5.0" />
 		<PackageReference Include="FastMember.NetCore" Version="1.1.0" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="SharpGLTF.Core" Version="1.0.0-alpha0020" />
 		<PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0020" />
-		<PackageReference Include="ZeroFormatter" Version="1.6.4" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\WolvenKit.Interfaces\WolvenKit.Interfaces.csproj" />
+		<ProjectReference Include="..\WolvenKit.Core\WolvenKit.Core.csproj" />
 	</ItemGroup>
 
 </Project>
