--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -47,13 +47,16 @@
     <PackageReference Include="SharpZipLib" Version="1.3.1" />
     <PackageReference Include="WolvenKit.RED3.CR2W" Version="3.0.0" />
     <PackageReference Include="WolvenKit.RED4.CR2W" Version="3.0.0" />
-    <PackageReference Include="ZeroFormatter" Version="1.6.4" />
     <PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Model\Cr2w\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WolvenKit.Core\WolvenKit.Core.csproj" />
   </ItemGroup>
 
 </Project>
