--- a/WolvenKit/WolvenKit.UI.csproj
+++ b/WolvenKit/WolvenKit.UI.csproj
@@ -363,6 +363,7 @@
     <PackageReference Include="SharpZipLib" Version="1.3.1" />
     <PackageReference Include="SkiaSharp" Version="2.80.2" />
     <PackageReference Include="SkiaSharp.Views.WPF" Version="2.80.2" />
+    <PackageReference Include="Syncfusion.Edit.WPF" Version="19.1.0.58" />
     <PackageReference Include="Syncfusion.SfBusyIndicator.WPF" Version="19.1.0.58" />
     <PackageReference Include="Syncfusion.SfGrid.WPF" Version="19.1.0.58" />
     <PackageReference Include="Syncfusion.SfNavigationDrawer.WPF" Version="19.1.0.58" />
@@ -1796,5 +1797,10 @@
     <Reference Include="AutoUpdater.NET">
       <HintPath>..\Libs\AutoUpdater.NET.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="PathIcon.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
   </ItemGroup>
 </Project>
