--- a/WolvenKit/Config/AvalonDock.Layout.config
+++ b/WolvenKit/Config/AvalonDock.Layout.config
@@ -32,6 +32,7 @@
   <BottomSide />
   <FloatingWindows />
   <Hidden>
+
     <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Bulk Editor" IsSelected="True" ContentId="BulkEditor_Tool" LastActivationTimeStamp="03/31/2021 15:25:56" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
     <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Import" IsSelected="True" ContentId="Import_Tool" LastActivationTimeStamp="03/31/2021 15:25:56" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
     <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Csv Editor" IsSelected="True" ContentId="CsvEditor_Tool" LastActivationTimeStamp="03/31/2021 15:25:56" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
@@ -50,5 +51,7 @@
     <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="WCC Tool" IsSelected="True" ContentId="WCCTool_Tool" LastActivationTimeStamp="03/31/2021 15:25:56" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
     <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Mimics" IsSelected="True" ContentId="Mimics_Tool" LastActivationTimeStamp="03/31/2021 15:25:56" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
     <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="CR2W Editor" IsSelected="True" ContentId="CR2WEditor_Tool" LastActivationTimeStamp="03/31/2021 15:26:06" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+    <LayoutAnchorable AutoHideMinWidth="100" AutoHideMinHeight="100" CanDockAsTabbedDocument="False" Title="Import Export Tool" IsSelected="True" ContentId="ImportExport_Tool" LastActivationTimeStamp="03/31/2021 15:26:06" PreviousContainerId="92cc7d77-ac2d-462e-98e2-2b1402dd4f44" PreviousContainerIndex="0" />
+
   </Hidden>
 </LayoutRoot>
