--- a/WolvenKit.RED3.CR2W/WolvenKit.RED3.CR2W.csproj
+++ b/WolvenKit.RED3.CR2W/WolvenKit.RED3.CR2W.csproj
@@ -16,6 +16,7 @@
     <PackageTags>wolvenkit, witcher3</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>3.0.0</Version>
+      <PackageOutputPath>./nupkg</PackageOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
