--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -13,9 +13,10 @@
     <PackageTags>wolvenkit</PackageTags>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
       <TargetFramework>net5.0</TargetFramework>
-      <Version>2.0.0</Version>
-      <AssemblyVersion>2.0.0.0</AssemblyVersion>
-      <FileVersion>2.0.0.0</FileVersion>
+      <Version>2.1.0</Version>
+      <AssemblyVersion>2.1.0.0</AssemblyVersion>
+      <FileVersion>2.1.0.0</FileVersion>
+      <PackageOutputPath>./nupkg</PackageOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -40,7 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Catel.Core" Version="5.12.13" />
+    <PackageReference Include="Catel.Core" Version="5.12.14" />
     <PackageReference Include="Catel.Fody" Version="4.7.0">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -49,7 +50,7 @@
     <PackageReference Include="protobuf-net" Version="3.0.101" />
     <PackageReference Include="SharpZipLib" Version="1.3.1" />
     <PackageReference Include="WolvenKit.RED3.CR2W" Version="3.0.0" />
-    <PackageReference Include="WolvenKit.RED4.CR2W" Version="3.0.0" />
+    <PackageReference Include="WolvenKit.RED4.CR2W" Version="3.1.0" />
     <PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
   </ItemGroup>
