--- a/WolvenKit.Core/WolvenKit.Core.csproj
+++ b/WolvenKit.Core/WolvenKit.Core.csproj
@@ -7,18 +7,18 @@
       <Authors>Hambalkó Bence, Moritz Baron</Authors>
       <Company>WolvenKit</Company>
       <Product>WolvenKit.Core</Product>
-      <Description>File formats (The Witcher 3) for the WolvenKit Mod Editor.</Description>
+      <Description>Core file formats for the WolvenKit Mod Editor.</Description>
       <PackageLicenseExpression>MIT</PackageLicenseExpression>
       <PackageProjectUrl>https://github.com/WolvenKit/Wolven-kit</PackageProjectUrl>
       <RepositoryUrl>https://github.com/WolvenKit/Wolven-kit</RepositoryUrl>
       <RepositoryType>git</RepositoryType>
-      <PackageTags>wolvenkit, witcher3</PackageTags>
+      <PackageTags>wolvenkit, witcher3, cyberpunk2077</PackageTags>
       <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-      <Version>1.0.0</Version>
+      <Version>1.1.0</Version>
+      <PackageOutputPath>./nupkg</PackageOutputPath>
   </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Catel.Core" Version="5.12.13" />
         <PackageReference Include="FastMember" Version="1.5.0" />
         <PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.9.0" />
