--- a/WolvenKit.RED4.CR2W/WolvenKit.RED4.CR2W.csproj
+++ b/WolvenKit.RED4.CR2W/WolvenKit.RED4.CR2W.csproj
@@ -11,9 +11,10 @@
 		<RepositoryType>git</RepositoryType>
 		<RepositoryUrl>https://github.com/WolvenKit/Wolven-kit</RepositoryUrl>
 		<PackageTags>wolvenkit, cyberpunk2077</PackageTags>
-		<AssemblyVersion>3.0.0.0</AssemblyVersion>
-		<FileVersion>3.0.0.0</FileVersion>
-		<Version>3.0.0</Version>
+        <PackageOutputPath>./nupkg</PackageOutputPath>
+		<AssemblyVersion>3.1.0.0</AssemblyVersion>
+		<FileVersion>3.1.0.0</FileVersion>
+		<Version>3.1.0</Version>
 		<NoWarn>$(NoWarn);NU5104</NoWarn>
 	</PropertyGroup>
 
@@ -27,8 +28,8 @@
 		<PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
 		<PackageReference Include="FastMember" Version="1.5.0" />
 		<PackageReference Include="FastMember.NetCore" Version="1.1.0" />
-		<PackageReference Include="SharpGLTF.Core" Version="1.0.0-alpha0020" />
-		<PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0020" />
+		<PackageReference Include="SharpGLTF.Core" Version="1.0.0-alpha0022" />
+		<PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0022" />
 	</ItemGroup>
 
 	<ItemGroup>
