--- a/WolvenKit.Witcher3Formats/WolvenKit.Witcher3Formats.csproj
+++ b/WolvenKit.Witcher3Formats/WolvenKit.Witcher3Formats.csproj
@@ -85,6 +85,7 @@
     <ItemGroup>
         <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
         <ProjectReference Include="..\WolvenKit.Core\WolvenKit.Core.csproj" />
+        <ProjectReference Include="..\WolvenKit.Modkit\WolvenKit.Modkit.csproj" />
     </ItemGroup>
 
 
