--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -17,6 +17,7 @@
       <AssemblyVersion>2.1.0.0</AssemblyVersion>
       <FileVersion>2.1.0.0</FileVersion>
       <PackageOutputPath>./nupkg</PackageOutputPath>
+      <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
