--- a/WolvenKit.Modkit/WolvenKit.Modkit.csproj
+++ b/WolvenKit.Modkit/WolvenKit.Modkit.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AsyncEnumerator" Version="4.0.2" />
     <PackageReference Include="SharpGLTF.Core" Version="1.0.0-alpha0022" />
     <PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0022" />
     <PackageReference Include="WolvenKit.RED4.CR2W" Version="3.1.0" />
