--- a/WolvenKit/WolvenKit.UI.csproj
+++ b/WolvenKit/WolvenKit.UI.csproj
@@ -369,6 +369,7 @@
     <PackageReference Include="Syncfusion.SfBusyIndicator.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.SfGrid.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.SfNavigationDrawer.WPF" Version="19.1.0.63" />
+    <PackageReference Include="Syncfusion.SfRichTextBoxAdv.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.SfSkinManager.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.SfTreeNavigator.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.SfTreeView.WPF" Version="19.1.0.63" />
