--- a/WolvenKit/WolvenKit.UI.csproj
+++ b/WolvenKit/WolvenKit.UI.csproj
@@ -63,6 +63,9 @@
     <Page Remove="Resources\Styles\Custom\**" />
   </ItemGroup>
   <ItemGroup>
+    <Content Remove="C:\Users\ghost\.nuget\packages\wolvenkit.handycontrol\3.2.0\contentFiles\any\net5.0-windows7.0\LangProvider.tt" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="Ab3d.DirectX.Client.Settings.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
