--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -13,9 +13,9 @@
     <PackageTags>wolvenkit</PackageTags>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
       <TargetFramework>net5.0</TargetFramework>
-      <Version>2.1.0</Version>
-      <AssemblyVersion>2.1.0.0</AssemblyVersion>
-      <FileVersion>2.1.0.0</FileVersion>
+      <Version>2.2.0</Version>
+      <AssemblyVersion>2.2.0.0</AssemblyVersion>
+      <FileVersion>2.2.0.0</FileVersion>
       <PackageOutputPath>./nupkg</PackageOutputPath>
       <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
@@ -64,12 +64,12 @@
     <PackageReference Include="SharpZipLib" Version="1.3.1" />
     <PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
+    <PackageReference Include="WolvenKit.RED3.CR2W" Version="3.32.0" />
+    <PackageReference Include="WolvenKit.RED4.CR2W" Version="3.22.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WolvenKit.Core\WolvenKit.Core.csproj" />
-    <ProjectReference Include="..\WolvenKit.RED4.CR2W\WolvenKit.RED4.CR2W.csproj" />
-    <ProjectReference Include="..\WolvenKit.RED3.CR2W\WolvenKit.RED3.CR2W.csproj" />
   </ItemGroup>
 
 </Project>
