--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -60,6 +60,7 @@
     </PackageReference>
     <PackageReference Include="FastMember" Version="1.5.0" />
     <PackageReference Include="FmodAudio" Version="2.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="protobuf-net" Version="3.0.101" />
     <PackageReference Include="SharpZipLib" Version="1.3.1" />
     <PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
