--- a/WolvenKit.RED4.CR2W/WolvenKit.RED4.CR2W.csproj
+++ b/WolvenKit.RED4.CR2W/WolvenKit.RED4.CR2W.csproj
@@ -26,6 +26,7 @@
 	<ItemGroup>
 		<PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
 		<PackageReference Include="FastMember" Version="1.5.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
