readable cr2w to json

--- a/WolvenKit.CLI/WolvenKit.CLI.csproj
+++ b/WolvenKit.CLI/WolvenKit.CLI.csproj
@@ -20,6 +20,8 @@
       <RepositoryUrl>https://github.com/WolvenKit/Wolven-kit</RepositoryUrl>
       <RepositoryType>git</RepositoryType>
       <PackageTags>wolvenkit, cyberpunk2077</PackageTags>
+      <StartupObject>CP77Tools.Program</StartupObject>
+      
   </PropertyGroup>
 
   <ItemGroup>
