--- a/WolvenKit.RED3.CR2W/WolvenKit.RED3.CR2W.csproj
+++ b/WolvenKit.RED3.CR2W/WolvenKit.RED3.CR2W.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
     <PackageReference Include="FastMember" Version="1.5.0" />
   </ItemGroup>
