--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -48,6 +48,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="lib\kraken.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        <Pack>true</Pack>
+        <PackagePath>lib\net5.0</PackagePath>
+    </Content>
     <Content Include="texconv.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
