--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -29,7 +29,9 @@
     <PackageReference Include="Feather.Controls" Version="1.0.3" />
     <PackageReference Include="FFME.Windows" Version="4.3.340" />
     <PackageReference Include="ModuleInit.Fody" Version="2.1.1" PrivateAssets="all" />
-
+    <PackageReference Include="Magick.NET-Q16-HDRI-AnyCPU" Version="7.24.0" />
+    <PackageReference Include="Magick.NET.SystemDrawing" Version="2.0.16" />
+    <PackageReference Include="Magick.NET.SystemWindowsMedia" Version="3.0.10" />
     <PackageReference Include="Catel.MVVM" Version="5.12.14" />
     <PackageReference Include="DiscordRichPresence" Version="1.0.175" />
     <PackageReference Include="MahApps.Metro" Version="2.4.5" />
