Update I/E Branch with Settings so far. (#473)
* Small edit

* fix recent projects and missing projects

* Icons Fixes

* Ui Updates

* Testing

* Error new docking

* Testing

* refactor services and begin refactoring DI

* fix merge

* update nugets

* lazy hash loading

- fix build

* fix DI

* fix wkit dependencies

* fix console DI

* console colors

* archive parsing optimizations

* 15% faster pinvoke :P

* fix wkit startup

- enabled error logging in LogView

* unbundle async overloads

* enum editor

* handle editor, some oodle options

- fixed a registry bug on startup
- fixed a bug where the settings would not be saved on startup

* save theme color through reloads

* fixed a bug where switching projects crashes wkit

* minor comit

* #457
Fixed Styling.

* Fix build

* #331 & #70
Fixed some typos + Organized some code.

* #458
Testing.

* #70 & #331
Cleanup

* #70 & #331
- More cleanup.

* #459
Start of Ribbon Replacement

* #460 & #459

* #453
Cleanup

* #453
Basic Breadcrumb (Laggy)
No Interaction between navigation elements.
Added MultiSelection

* TempWork

* #460
New Docking Prep

* tw3 manager fixes

- fixed a bug where tw3 managers would not load

* Update exe binding

* Move cache files to appdata

* Pls don't hurt me @offline

* #460

* #459

* #462 , #460

* #459

* #459
Removes The old Ribbon (Mostly)

* #459
Application Menu

* #459 - Cleanup

* Add basic context menu for AB import

#453

* AddPathDialog Control

Added UserControl for general file or folder path adding purposes in settings, with dedicated "PathEditor" property grid custom editor.

* Add minor AB UI fixes

#453

* #463 and #331

* Add TreeNavSF synchronization with AB

#453

* #453 - Small Adjustments.
#463 - Simple changes.
#331 - More Cleanup

* #453 - Cleaned up Old BreadCrumb Code.

* #463 - Small visual edits.
#331 - Cleaned up home

--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0-windows</TargetFramework>
@@ -28,6 +28,7 @@
   <ItemGroup>
     <PackageReference Include="Feather.Controls" Version="1.0.3" />
     <PackageReference Include="FFME.Windows" Version="4.3.340" />
+    <PackageReference Include="MahApps.Metro.IconPacks" Version="4.8.0" />
     <PackageReference Include="ModuleInit.Fody" Version="2.1.1" PrivateAssets="all" />
     <PackageReference Include="Magick.NET-Q16-HDRI-AnyCPU" Version="7.24.0" />
     <PackageReference Include="Magick.NET.SystemDrawing" Version="2.0.16" />
@@ -44,6 +45,8 @@
     <PackageReference Include="SharpVectors.Reloaded" Version="1.7.1" />
     <PackageReference Include="Svg" Version="3.2.3" />
     <PackageReference Include="Syncfusion.Edit.WPF" Version="19.1.0.59" />
+    <PackageReference Include="Syncfusion.PropertyGrid.WPF" Version="19.1.0.63" />
+    <PackageReference Include="Syncfusion.SfAccordion.WPF" Version="19.1.0.63" />
     <PackageReference Include="WolvenKit.HandyControl" Version="3.2.0" />
     <PackageReference Include="Catel.Fody" Version="4.7.0" PrivateAssets="all" />
     <PackageReference Include="WolvenKit.Orchestra.Core" Version="4.2.3" />
