--- a/WolvenKit.MSTests/appsettings.json
+++ b/WolvenKit.MSTests/appsettings.json
@@ -1,4 +1,7 @@
 {
   "GameDirectory": "D:\\Program Files\\Steam\\steamapps\\common\\Cyberpunk 2077",
-  "WriteToFile": true
+  "WriteToFile": true,
+  "LIMIT": 1000,
+  "KEEP": true,
+  "RANDOM": true
 }
