Cleanup&coding standard implementation.

--- a/CodeMaid.config
+++ b/CodeMaid.config
@@ -11,7 +11,7 @@
                 <value>True</value>
             </setting>
             <setting name="Reorganizing_RegionsInsertNewRegions" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="Formatting_CommentXmlSpaceTags" serializeAs="String">
                 <value>True</value>
@@ -29,6 +29,9 @@
                 <value>True</value>
             </setting>
             <setting name="Formatting_CommentXmlSpaceSingleTags" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Cleaning_AutoCleanupOnFileSave" serializeAs="String">
                 <value>True</value>
             </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
