--- a/WolvenKit.MSTests/appsettings.json
+++ b/WolvenKit.MSTests/appsettings.json
@@ -1,7 +1,6 @@
 {
   "GameDirectory": "D:\\Program Files\\Steam\\steamapps\\common\\Cyberpunk 2077",
   "WriteToFile": true,
-  "LIMIT": 10000,
-  "KEEP": true,
-  "RANDOM": true
+  "LIMIT": 1000,
+  "KEEP": true
 }
