add appsettings to console

--- a/WolvenKit.CLI/appsettings.json
+++ b/WolvenKit.CLI/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Warning"
     }
+  },
+  "XbmExportArgs": {
+    "Flip" : true,
+    "UncookExtension": "tga"
+  },
+  "MeshExportArgs": {
+    "ArchiveDepot" : "",
+    "meshExportType" : "WithMaterials"
   }
 }
