--- a/WolvenKit.CLI/appsettings.json
+++ b/WolvenKit.CLI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "XbmExportArgs": {
-    "Flip" : true,
-    "UncookExtension": "tga"
+    "Flip" : false,
+    "UncookExtension": "dds"
   }
 }
