--- a/CodeMaid.config
+++ b/CodeMaid.config
@@ -11,7 +11,7 @@
                 <value>True</value>
             </setting>
             <setting name="Reorganizing_RegionsInsertNewRegions" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="Formatting_CommentXmlSpaceTags" serializeAs="String">
                 <value>True</value>
@@ -23,13 +23,20 @@
                 <value>False</value>
             </setting>
             <setting name="Reorganizing_RunAtStartOfCleanup" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="Formatting_CommentXmlKeepTagsTogether" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="Formatting_CommentXmlSpaceSingleTags" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="Reorganizing_RegionsRemoveExistingRegions" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Reorganizing_AlphabetizeMembersOfTheSameGroup"
+                serializeAs="String">
+                <value>False</value>
             </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
