Fix : Select all header for Checkboxes in EXPORT GRID Detailed Problem : Checkboxes needed to be able to be toggled all at once. Fix details : A simple checkbox has been added to the Checkbox Column Header that toggles the check state of all exportable items. Upon toggling all and deselecting other items the state of all checkboxes is kept.

--- a/CodeMaid.config
+++ b/CodeMaid.config
@@ -38,6 +38,9 @@
                 serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ThirdParty_UseXAMLStylerCleanup" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
