--- a/WolvenKit.MSTests/WolvenKit.MSTests.csproj
+++ b/WolvenKit.MSTests/WolvenKit.MSTests.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+      <PackageReference Include="Catel.Core" Version="5.12.14" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
       <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
