--- a/WolvenKit.Modkit/WolvenKit.Modkit.csproj
+++ b/WolvenKit.Modkit/WolvenKit.Modkit.csproj
@@ -6,11 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-      <PackageReference Include="Catel.Core" Version="5.12.14" />
-      <PackageReference Include="Catel.Fody" Version="4.7.0">
+      <PackageReference Include="PropertyChanged.Fody" Version="3.4.0" >
           <PrivateAssets>all</PrivateAssets>
       </PackageReference>
-    <PackageReference Include="AsyncEnumerator" Version="4.0.2" />
+      <PackageReference Include="AsyncEnumerator" Version="4.0.2" />
     <PackageReference Include="SharpGLTF.Core" Version="1.0.0-alpha0022" />
     <PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0022" />
   </ItemGroup>
