Revert SF nugets

--- a/CodeMaid.config
+++ b/CodeMaid.config
@@ -41,6 +41,9 @@
             <setting name="ThirdParty_UseXAMLStylerCleanup" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="Cleaning_PerformPartialCleanupOnExternal" serializeAs="String">
+                <value>2</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
