--- a/WolvenKit.Modkit/WolvenKit.Modkit.csproj
+++ b/WolvenKit.Modkit/WolvenKit.Modkit.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
       <PackageReference Include="PropertyChanged.Fody" Version="3.4.0">
           <PrivateAssets>all</PrivateAssets>
       </PackageReference>
