453 feature assetbrowser overhaul (#489)
* Icon fixes , AB Slightly faster I think? :D

* ab stuff

* Fix Build

* rename and item caching in ArchiveManagers

* refactor AB

- disable propertiesView previews when hidden
- refactor AB itemssources

* faster loading

* fix console function interface

* Shell Overhaul

* Fix Catfact Crash if server is dead.
Fix StatusBarSize

* SearchStuff

* Search Delay

* Update WolvenKitArchiveManager.cs

* working back button

* use a treegrid :(

* fix AssetBrowserViewModel init

* Noice

* Icon Fix

* Bunch O fixes

* Fix

* Small Fix regarding previews

* PE Context Menu  Fixed

* Search bar  Project Explorer

* PE search prep

* Quick fix

* working asset browser left nav search

* working project explorer search

* HomePage Changes

* Hide TW3 option

* Clean up settings

* Hide Tw3 from settings

* Collapse Tools for now.

* Fix Path

* Fix more paths

* fix AB right context menu

* fix packing

* fix settings binding

* Webview Fix AppData

* Clean Webview Fix

* Clean Mesh Paths

* fix fuzzo :kek

* revert a change

* fix archive loading, move archive cache to appdata

* Homepage etc

Co-authored-by: R503B <sodanak1n@outlook.com>

--- a/WolvenKit/WolvenKit.UI.csproj
+++ b/WolvenKit/WolvenKit.UI.csproj
@@ -369,9 +369,11 @@
     <PackageReference Include="Syncfusion.Edit.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.PropertyGrid.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.SfAccordion.WPF" Version="19.1.0.63" />
+    <PackageReference Include="Syncfusion.SfBarcode.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.SfBusyIndicator.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.SfGrid.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.SfHubTile.WPF" Version="19.1.0.63" />
+    <PackageReference Include="Syncfusion.SfImageEditor.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.SfNavigationDrawer.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.SfRadialMenu.WPF" Version="19.1.0.63" />
     <PackageReference Include="Syncfusion.SfRichTextBoxAdv.WPF" Version="19.1.0.63" />
@@ -391,7 +393,7 @@
     <PackageReference Include="WolvenKit.AvalonEdit" Version="6.1.1" />
     <PackageReference Include="WolvenKit.HandyControl" Version="3.2.0" />
     <PackageReference Include="WolvenKit.Orchestra.Core" Version="4.2.3" />
-    <PackageReference Include="WolvenKit.Shell.Ribbon.FluentMahApps" Version="4.2.6" />
+    <PackageReference Include="WolvenKit.Shell.Ribbon.FluentMahApps" Version="5.0.1" />
     <PackageReference Include="WolvenKit.WPFSoundVisualizationLibNet5" Version="1.0.1" />
     <PackageReference Include="WpfAnalyzers" Version="3.5.4" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
@@ -1060,9 +1062,9 @@
     <Resource Include="Resources\Old\Images\RedEngine\w2surf.png" />
     <Resource Include="Resources\Old\Images\RedEngine\w2w.png" />
     <Resource Include="Resources\Old\Images\RedEngine\worldmap.png" />
-    <Resource Include="Resources\Media\Images\Icons\Application\TaskBarIcon.ico">
+    <Content Include="Resources\Media\Images\Icons\Application\TaskBarIcon.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
+    </Content>
     <Content Include="Resources\Old\Images\Preferences_light_64x.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
